kube-system/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
spec:
  basicAuth:
    secret: traefik-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-allowlan
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.0/24
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-slash
spec:
  redirectRegex:
    regex: ^(.*)/dashboard$
    replacement: ${1}/dashboard/
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-root-redirect
spec:
  redirectRegex:
    regex: ^https?://[^/]+/?$
    replacement: /dashboard/
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k8s.karkki.org`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-auth
        - name: traefik-dashboard-slash
        - name: traefik-dashboard-root-redirect
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
